[build-system]
requires = ["setuptools>=61.0","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scitq"
version = "1.3.1"
authors = [
  { name="Raynald de Lahondès" },
  { name="Rémi Tan" }
]
description = "A (distributed) scientific task queue"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.urls]
"Homepage" = "https://github.com/gmtsciencedev/scitq"
"Bug Tracker" = "https://github.com/gmtsciencedev/scitq/issues"
"Documentation" = "https://scitq.readthedocs.io/"

[project.scripts]
scitq-worker = "scitq.client:main"
scitq-launch = "scitq.launch:main"
scitq-manage = "scitq.manage:main"
scitq-queue = "scitq.server:background_app"
scitq-fetch = "scitq.fetch:main"
scitq-inventory = "scitq.server:ansible_inventory"
scitq-azure-updater = "scitq.providers.azure.update:run"
scitq-ovh-updater = "scitq.providers.ovh.update:run"

[tool.setuptools.packages.find]
where = ["src"]


